updated hero vid

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 ---
 layout: "base.html"
-description: "Junk Force Michigan - Electrical Repair, Installation & Lighting Solutions in Michigan"
-metaTitle: "Junk Force Michigan | Electrical Services in Michigan"
+description: "Junk Force Michigan - Reliable Junk Removal & Hauling Services in Michigan"
+metaTitle: "Junk Force Michigan | Junk Removal & Hauling Services in Michigan"
 tagTitle: "Junk Force Michigan"
 preloadImg: "/images/landing.png"
 preloadCSS: "/css/local.css"
@@ -18,7 +18,7 @@ eleventyNavigation:
 <section id="hero">
   <video autoplay muted loop playsinline class="cs-picture">
     <source
-      src="/images/hero_vid.mp4"
+      src="/images/hero_vid.mov"
       type="video/mp4"
       autoplay
       muted
@@ -30,16 +30,14 @@ eleventyNavigation:
   <div class="cs-overlay"></div>
   <div class="cs-container">
     <div class="cs-flex-group">
-      <span class="cs-topper">Reliable. Professional. Always On Time</span>
+      <span class="cs-topper">Same-Day. Affordable. Family-Owned.</span>
       <h1 class="cs-title">
-        Power Your Home or Business with Expert Electrical Services
+        Junk Removal You Can Count On
       </h1>
       <p class="cs-text">
-        At Junk Force Michigan, we provide top-quality electrical repairs,
-        installations, and lighting solutions for residential, commercial, and
-        industrial clients across Michigan. From floodlight repairs to LED
-        conversions and standby power systems, our licensed electricians ensure
-        every project is safe, efficient, and built to last.
+        At Junk Force Michigan, we provide fast, reliable, and eco-friendly junk removal
+        services for homes and businesses across Michigan. From furniture hauling to appliance
+        disposal, yard waste cleanup to full estate cleanouts — we make decluttering simple, stress-free, and affordable.
       </p>
       <a href="/junk-removal/" class="cs-button-solid"
         >Explore Services</a
@@ -71,15 +69,14 @@ eleventyNavigation:
         aria-hidden="true"
         decoding="async"
         src="/assets/svgs/service_1.svg"
-        alt="electrical repair icon"
+        alt="junk removal icon"
         width="48"
         height="48"
       />
     </picture>
-    <h2>Electrical Repair</h2>
+    <h2>Junk Removal</h2>
     <p>
-      Fast, dependable repair services to keep your electrical systems running
-      safely — from outlets and wiring to lighting and panel issues.
+      Quick and affordable junk removal for homes and businesses — from single items to full cleanouts.
     </p>
   </div>
   <div class="card">
@@ -88,16 +85,14 @@ eleventyNavigation:
         aria-hidden="true"
         decoding="async"
         src="/assets/svgs/service_2.svg"
-        alt="lighting installation icon"
+        alt="furniture hauling icon"
         width="48"
         height="48"
       />
     </picture>
-    <h2>Lighting & LED Conversions</h2>
+    <h2>Furniture Hauling</h2>
     <p>
-      Upgrade your property with energy-efficient LED lighting and expertly
-      installed floodlights or parking lot lights for better visibility and
-      savings.
+      We safely remove and dispose of old furniture, couches, mattresses, and more — so you don’t have to lift a thing.
     </p>
   </div>
   <div class="card">
@@ -106,15 +101,14 @@ eleventyNavigation:
         aria-hidden="true"
         decoding="async"
         src="/assets/svgs/service_3.svg"
-        alt="standby power systems icon"
+        alt="appliance disposal icon"
         width="48"
         height="48"
       />
     </picture>
-    <h2>Standby Power Systems</h2>
+    <h2>Appliance Disposal</h2>
     <p>
-      Ensure uninterrupted power with professional installation and maintenance
-      of reliable standby generators for homes and businesses.
+      Eco-friendly appliance pickup and recycling for refrigerators, washers, dryers, and more.
     </p>
   </div>
 </section>
@@ -126,33 +120,24 @@ eleventyNavigation:
 <section id="sbs">
   <div class="cs-container">
     <div class="cs-left">
-      {% image './src/images/about_img_0.png', 'electrical work', 'cs-picture
+      {% image './src/images/about_img_0.png', 'junk hauling service', 'cs-picture
       cs-picture1', 'lazy'%}
     </div>
     <div class="cs-right">
       <span class="cs-topper">About Us</span>
       <h2 class="cs-title">About Junk Force Michigan</h2>
       <p class="cs-text">
-        Junk Force Michigan is committed to delivering safe, efficient, and
-        dependable electrical solutions for Michigan’s homeowners and
-        businesses. From small repairs to large-scale installations, our team
-        combines technical expertise with a dedication to customer satisfaction.
+        Junk Force Michigan is a family-owned business based in Berkley, MI. Founded by Mike after a 30-year IT career, our mission is simple: 
+        provide affordable, reliable junk hauling services while giving back to our community.
       </p>
       <p class="cs-text">
-        We specialize in residential, commercial, and industrial electrical work
-        — including lighting upgrades, parking lot light repairs, LED
-        conversions, and standby power systems. Every project is handled by
-        skilled professionals who prioritize quality, safety, and lasting
-        performance.
+        We specialize in furniture removal, appliance disposal, yard waste cleanup, garage clear-outs, and full estate cleanouts. Our eco-friendly approach ensures items are donated or recycled whenever possible.
       </p>
       <div class="cs-flex-group">
         <p class="cs-flex-p">
-          My name is Kurt Mauer, owner of Junk Force Michigan. With years of
-          hands-on electrical experience and a passion for delivering
-          exceptional service, I ensure every client gets the right solution,
-          done right the first time.
+           I’m Mike Fry, founder of Junk Force Michigan. After 30 years in the corporate world, I decided to build a hands-on business with my kids. We're dedicated to helping our neighbors clear out unwanted junk and reclaim their space! We handle all the heavy lifting and disposal with a commitment to 100% customer satisfaction. Let us make your junk disappear! 🚚 We proudly serve the greater metro Detroit area and surrounding communities. Ready to get rid of your junk? Request a free quote today!
         </p>
-        <span class="cs-name">Kurt Mauer</span>
+        <span class="cs-name">Mike Fry</span>
         <span class="cs-job">Owner</span>
         <img
           class="cs-quote-icon"
@@ -176,31 +161,19 @@ eleventyNavigation:
 <section id="sbs-r">
   <div class="cs-container">
     <div class="cs-left">
-      {% image './src/images/featured_img_0.png', 'electrical installation',
+      {% image './src/images/featured_img_0.png', 'junk hauling in Michigan',
       'cs-picture cs-picture1', 'lazy'%}
     </div>
     <div class="cs-right">
-      <span class="cs-topper">Electrical Expertise</span>
-      <h2 class="cs-title">Junk Force Michigan</h2>
+      <span class="cs-topper">Full-Service Junk Removal</span>
+      <h2 class="cs-title">Why Choose Junk Force Michigan</h2>
       <p class="cs-text">
-        We offer complete electrical services across Michigan, including system
-        repairs, lighting upgrades, LED conversions, generator installations,
-        and more. Our mission is to deliver safe, reliable, and cost-effective
-        solutions for every client.
+        We handle everything from single-item pickups to large property cleanouts. Our same-day service and affordable pricing make it easy to get your space back fast.
       </p>
       <p class="cs-text">
-        From quick repairs to complex installations, we bring the skills and
-        experience to get the job done efficiently. We work with homeowners,
-        contractors, facility managers, and business owners to provide tailored
-        solutions that meet their exact needs.
+        Whether it’s clearing a garage, cleaning out a basement, or hauling away yard waste, we do the heavy lifting so you don’t have to. We work with homeowners, renters, realtors, and businesses to provide stress-free solutions that fit your needs.
         <br /><br />
-        Our work ensures compliance with safety codes, improves energy
-        efficiency, and enhances your property’s functionality. Whether it’s
-        upgrading a commercial lighting system or installing a residential
-        standby generator, we make sure your power is always ready.
-        <br /><br />
-        Trust Junk Force Michigan for professional electrical services that
-        combine expertise, quality, and customer care.
+        Our family values mean we treat every job with respect, care, and attention to detail. 
       </p>
       <a href="/junk-removal/" class="button-solid">
         Learn More About Our Services →
@@ -218,21 +191,17 @@ eleventyNavigation:
     <span class="cs-topper">Our Reviews</span>
     <h2 class="cs-title">What Our Customers Say</h2>
     <p class="cs-text">
-      We’re proud to provide electrical services that keep homes and businesses
-      powered, safe, and efficient. From emergency repairs to full system
-      upgrades, our customers appreciate our reliability, expertise, and
-      attention to detail. Here’s what they have to say.
+      We’re proud to help Michigan families and businesses reclaim their spaces.
+      Customers love our fast service, fair pricing, and family touch. Here’s what they have to say.
     </p>
     <ul class="cs-card-group">
       <li class="cs-item">
         <p class="cs-item-p">
-          Junk Force Michigan was outstanding! They fixed our parking lot lights
-          quickly and even suggested an LED upgrade that saved us money.
-          Professional, courteous, and efficient from start to finish.
+          Junk Force Michigan was amazing! They cleared out our garage in under an hour and even swept up after. Highly recommend!
         </p>
         <span class="cs-reviewer">
           Sarah L.
-          <span class="cs-desc">Client</span>
+          <span class="cs-desc">Homeowner</span>
         </span>
         <img
           class="cs-item-stars"
@@ -247,9 +216,7 @@ eleventyNavigation:
       </li>
       <li class="cs-item">
         <p class="cs-item-p">
-          We had a generator installed by Junk Force Michigan and the process
-          was smooth and stress-free. The team was knowledgeable, friendly, and
-          ensured everything was working perfectly.
+          Mike and his team helped with an estate cleanout and made the process so much easier. Professional, respectful, and very affordable.
         </p>
         <span class="cs-reviewer">
           James P.
@@ -277,16 +244,15 @@ eleventyNavigation:
 <section id="cta">
   <div class="container">
     <h2 class="title">
-      Power Up Your Project <br />
-      With Us Today
+      Get Rid of Your Junk <br />
+      Today
     </h2>
     <p>
-      Let’s make your next electrical project a success. Contact More Power
-      Electric for expert service you can trust.
+      Ready for a clutter-free space? Contact Junk Force Michigan for affordable, same-day junk removal.
     </p>
     <a href="/contact/" class="button-solid">Contact Us</a>
   </div>
-  {% image './src/images/final_home_img.png', 'electrician at work', '', 'lazy',
+  {% image './src/images/final_home_img.png', 'junk removal team at work', '', 'lazy',
   '(max-width: 400px) 400px, (max-width: 850px) 850px, 1920px'%}
 </section>
 
