--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -1,7 +1,8 @@
 ---
 layout: "base.html"
-description: "Learn about Junk Force Michigan’s commitment to reliable electrical solutions, from residential wiring to
-commercial installations, serving customers across the Midwest with skill and integrity."
+description: "Learn about Junk Force Michigan’s commitment to reliable junk removal, hauling, and cleanout services
+across Michigan. From furniture and appliances to yard waste and construction debris, we handle it all with care and
+efficiency."
 metaTitle: "About Junk Force Michigan"
 tagTitle: "About"
 preloadImg: "/images/landing.png"
@@ -18,7 +19,7 @@ eleventyNavigation:
 
 <section id="int-hero">
   <h1 id="home-h">About Us</h1>
-  {% image './src/images/landing.png', 'Junk Force Michigan office', '', 'lazy',
+  {% image './src/images/landing.png', 'Junk Force Michigan team at work', '', 'lazy',
   '(max-width: 850px) 850px, 1920px'%}
 </section>
 
@@ -30,7 +31,7 @@ eleventyNavigation:
   <div class="cs-container">
     <!-- Left Image Section -->
     <div class="cs-left">
-      {% image './src/images/about_img_0.png', 'electrical work in progress',
+      {% image './src/images/about_img_0.png', 'junk removal in progress',
       'cs-picture cs-picture1', 'lazy'%}
     </div>
     <!-- Right Content Section-->
@@ -38,36 +39,28 @@ eleventyNavigation:
       <span class="cs-topper">About Us</span>
       <h2 class="cs-title">About Junk Force Michigan</h2>
       <p class="cs-text">
-        Junk Force Michigan is a trusted, family-owned company dedicated to
-        delivering safe, efficient, and dependable electrical services. We
-        handle residential wiring, commercial installations, system upgrades,
-        and electrical troubleshooting across the Midwest.
+        Junk Force Michigan is a locally owned and operated junk removal company
+        proudly serving homeowners, renters, and businesses across Michigan. We
+        provide fast, affordable, and eco-friendly removal services for
+        furniture, appliances, yard waste, construction debris, hot tubs, and
+        more.
       </p>
       <p class="cs-text">
-        We take the complexity out of electrical projects, ensuring every job
-        meets code, operates flawlessly, and is built to last. By working
-        directly with each client, we provide timely service, quality
-        workmanship, and customized solutions for every need.
+        Our mission is simple: make junk removal stress-free. Whether it’s a
+        single bulky item or a full property cleanout, our team shows up on
+        time, works efficiently, and ensures as much as possible is recycled or
+        donated to reduce landfill waste.
       </p>
 
       <div class="cs-flex-group">
         <p class="cs-flex-p">
-          I’m Kurt Mauer, founder of Junk Force Michigan. My mission from day
-          one has been to provide fair pricing, dependable work, and the peace
-          of mind that comes from knowing your electrical systems are in expert
-          hands.
+          I’m Mike Fry, founder of Junk Force Michigan. After 30 years in the corporate world, I decided to build a hands-on business with my kids. We're dedicated to helping our neighbors clear out unwanted junk and reclaim their space! We handle all the heavy lifting and disposal with a commitment to 100% customer satisfaction. Let us make your junk disappear! 🚚 We proudly serve the greater metro Detroit area and surrounding communities. Ready to get rid of your junk? Request a free quote today!
         </p>
-        <span class="cs-name">Kurt Mauer</span>
-        <span class="cs-job">Founder & CEO</span>
-        <img
-          class="cs-quote-icon"
-          loading="lazy"
-          decoding="async"
-          src="https://csimg.nyc3.digitaloceanspaces.com/SideBySide/quote-white.svg"
-          alt="quote icon"
-          width="136"
-          height="77"
-        />
+        <span class="cs-name">Mike Fry</span>
+        <span class="cs-job">Owner</span>
+        <img class="cs-quote-icon" loading="lazy" decoding="async"
+          src="https://csimg.nyc3.digitaloceanspaces.com/SideBySide/quote-white.svg" alt="quote icon" width="136"
+          height="77" />
       </div>
     </div>
   </div>
@@ -88,61 +81,60 @@ eleventyNavigation:
         <li class="cs-faq-item active">
           <button class="cs-button">
             <span class="cs-button-text">
-              What electrical services do you offer?
+              What types of junk do you remove?
             </span>
           </button>
           <p class="cs-item-p">
-            We provide complete electrical solutions including wiring, panel
-            upgrades, lighting installation, system repairs, and safety
-            inspections for homes and businesses.
+            We handle almost everything — furniture, appliances, yard waste,
+            hot tubs, construction debris, mattresses, and full property
+            cleanouts. If it can be lifted, we can haul it away.
           </p>
         </li>
         <li class="cs-faq-item">
           <button class="cs-button">
             <span class="cs-button-text">
-              Do you handle commercial projects?
+              Do you provide same-day service?
             </span>
           </button>
           <p class="cs-item-p">
-            Yes. We manage electrical work for offices, retail spaces,
-            warehouses, and other facilities, ensuring compliance with all local
-            and national electrical codes.
+            Yes! In many cases, we can offer same-day or next-day junk removal
+            so you don’t have to wait to clear out your space.
           </p>
         </li>
         <li class="cs-faq-item">
           <button class="cs-button">
             <span class="cs-button-text">
-              Can you help with new construction wiring?
+              What happens to the junk you collect?
             </span>
           </button>
           <p class="cs-item-p">
-            Absolutely. We design and install wiring systems for new builds,
-            working closely with contractors to ensure efficient layouts and
-            long-lasting performance.
+            We donate usable items to local charities whenever possible and
+            recycle materials like metal, appliances, and yard waste. Only what
+            can’t be reused goes to the landfill.
           </p>
         </li>
         <li class="cs-faq-item">
           <button class="cs-button">
             <span class="cs-button-text">
-              Do you work with homeowners and small businesses?
+              Do you work with homeowners and businesses?
             </span>
           </button>
           <p class="cs-item-p">
-            Yes. We partner with property owners of all sizes, delivering
-            affordable, high-quality electrical services tailored to their
-            specific needs.
+            Absolutely. We help homeowners, renters, realtors, landlords, and
+            business owners with cleanouts, office clearings, move-outs, and
+            more.
           </p>
         </li>
         <li class="cs-faq-item">
           <button class="cs-button">
             <span class="cs-button-text">
-              What makes Junk Force Michigan different?
+              Why choose Junk Force Michigan?
             </span>
           </button>
           <p class="cs-item-p">
-            We’re committed to safety, transparency, and expert workmanship.
-            Every project is handled by our skilled in-house electricians for
-            consistent quality and lasting results.
+            We’re professional, reliable, and eco-conscious. With upfront
+            pricing, friendly crews, and a commitment to recycling, we make junk
+            removal easy and affordable.
           </p>
         </li>
       </ul>
@@ -167,15 +159,15 @@ eleventyNavigation:
 <section id="cta">
   <div class="container">
     <h2 class="title">
-      Power Up <br />
+      Clear the Clutter <br />
       With Us Today
     </h2>
     <p>
-      Quality electrical work means a safer, more efficient property. Contact
-      Junk Force Michigan today and let’s get your project started right.
+      Junk piling up? Let Junk Force Michigan handle the heavy lifting. Fast,
+      affordable, and eco-friendly junk removal is just a call away.
     </p>
-    <a href="/contact/" class="button-solid">Free Consultation</a>
+    <a href="/contact/" class="button-solid">Free Estimate</a>
   </div>
-  {% image './src/images/final_home_img.png', 'Junk Force Michigan workspace',
+  {% image './src/images/final_home_img.png', 'Junk Force Michigan team hauling debris',
   '', 'lazy', '(max-width: 400px) 400px, (max-width: 850px) 850px, 1920'%}
 </section>
