--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -1,8 +1,8 @@
 ---
 layout: "base.html"
-description: "Contact Junk Force Michigan for expert electrical services, residential and commercial wiring, panel
-upgrades, and reliable 24/7 emergency repairs."
-metaTitle: "Contact Junk Force Michigan | Electrical Services & Repairs"
+description: "Contact Junk Force Michigan for fast, reliable junk removal, hauling, and cleanout services. Serving homes
+and businesses across Michigan with same-day service, affordable rates, and eco-friendly disposal."
+metaTitle: "Contact Junk Force Michigan | Junk Removal Services"
 tagTitle: "Contact"
 preloadImg: "/images/landing.png"
 preloadCSS: "/css/contact.css"
@@ -18,8 +18,8 @@ eleventyNavigation:
 
 <section id="int-hero">
   <h1 id="home-h">Contact Us</h1>
-  {% image './src/images/contactbannerimg.png', 'Junk Force Michigan customer support team ready to help with your
-  electrical needs', '', 'lazy', '(max-width: 400px) 400px, (max-width: 850px) 850px, 1920px'%}
+  {% image './src/images/contactbannerimg.png', 'Junk Force Michigan team ready to help with junk removal needs', '',
+  'lazy', '(max-width: 400px) 400px, (max-width: 850px) 850px, 1920px'%}
 </section>
 
 <!-- ============================================ -->
@@ -32,9 +32,9 @@ eleventyNavigation:
       <span class="cs-topper">Here to Help</span>
       <h2 class="cs-title">Get in Touch</h2>
       <p class="cs-text">
-        Whether you need a quick electrical repair, a full home rewiring, a panel upgrade, or expert advice on your next
-        project, Junk Force Michigan is ready to help. Our licensed electricians provide safe, efficient, and affordable
-        solutions for both residential and commercial clients.
+        Whether you’re clearing out old furniture, removing appliances, tackling yard waste, or need a full estate
+        cleanout, Junk Force Michigan is ready to help. Our family-owned business delivers fast, friendly, and
+        affordable junk removal services across Southeast Michigan.
       </p>
     </div>
     <!-- Form -->
@@ -49,7 +49,7 @@ eleventyNavigation:
       </label>
       <label class="cs-label">
         Phone
-        <input class="cs-input" required type="text" id="phone-242" name="phone" placeholder="+1 (206) 987-6543" />
+        <input class="cs-input" required type="text" id="phone-242" name="phone" placeholder="+1 (313) 444-9540" />
       </label>
       <label class="cs-label">
         How Did You Find Us
@@ -76,7 +76,7 @@ eleventyNavigation:
           </picture>
           <div class="cs-flex-group">
             <span class="cs-header">Email</span>
-            <a href="mailto:Morepowerelectricllc@gmail.com" class="cs-link">Morepowerelectricllc@gmail.com</a>
+            <a href="mailto:mike@junkforcemichigan.com" class="cs-link">mike@junkforcemichigan.com</a>
           </div>
         </li>
         <li class="cs-li">
@@ -86,7 +86,7 @@ eleventyNavigation:
           </picture>
           <div class="cs-flex-group">
             <span class="cs-header">Phone</span>
-            Tel: <a href="tel:810-459-6302">(810) 459-6302</a>
+            Tel: <a href="tel:313-444-9540">(313) 444-9540</a>
           </div>
         </li>
       </ul>
@@ -95,7 +95,7 @@ eleventyNavigation:
         <source media="(max-width: 600px)" srcset="/images/map.PNG" />
         <source media="(min-width: 601px)" srcset="/images/map.PNG" />
         <img class="cs-img" aria-hidden="true" loading="lazy" decoding="async" src="/images/map.PNG"
-          alt="Map showing Junk Force Michigan service location" width="462" height="438" />
+          alt="Map showing Junk Force Michigan service area" width="462" height="438" />
       </picture>
     </div>
   </div>
@@ -110,16 +110,16 @@ eleventyNavigation:
     <span class="cs-topper">Client Feedback</span>
     <h2 class="cs-title">What Our Customers Say</h2>
     <p class="cs-text">
-      At Junk Force Michigan, we take pride in delivering safe, dependable, and high-quality electrical work. From
-      emergency repairs to major installations, we’ve earned the trust of homeowners and businesses across the area.
-      Here’s what some of our satisfied clients have to say.
+      At Junk Force Michigan, we’re proud to provide same-day junk removal that’s reliable, affordable, and
+      eco-friendly. From hauling away old furniture to clearing full properties, our team delivers results you can
+      trust. Here’s what our customers have to say:
     </p>
     <ul class="cs-card-group">
       <!-- Review 1 -->
       <li class="cs-item">
         <p class="cs-item-p">
-          Junk Force Michigan was fantastic! They fixed my electrical issue quickly, explained everything clearly, and
-          made sure everything was safe before leaving. I highly recommend them.
+          Junk Force Michigan was amazing! They cleared out my garage in no time, were super professional, and even
+          swept up after. Highly recommend them.
         </p>
         <span class="cs-reviewer">
           Sarah L.
@@ -132,8 +132,8 @@ eleventyNavigation:
       <!-- Review 2 -->
       <li class="cs-item">
         <p class="cs-item-p">
-          I couldn’t be happier with their service. They replaced my old panel, brought everything up to code, and left
-          the workspace spotless. Professional, friendly, and efficient!
+          They handled our office cleanout quickly and at a great price. Friendly team, on time, and made the whole
+          process stress-free.
         </p>
         <span class="cs-reviewer">
           James P.
