--- a/src/index.html
+++ b/src/index.html
@@ -120,7 +120,7 @@ eleventyNavigation:
 <section id="sbs">
   <div class="cs-container">
     <div class="cs-left">
-      {% image './src/images/about_img_0.png', 'junk hauling service', 'cs-picture
+      {% image './src/images/about_img_0.webp', 'junk hauling service', 'cs-picture
       cs-picture1', 'lazy'%}
     </div>
     <div class="cs-right">
