--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -31,7 +31,7 @@ eleventyNavigation:
   <div class="cs-container">
     <!-- Left Image Section -->
     <div class="cs-left">
-      {% image './src/images/about_img_0.png', 'junk removal in progress',
+      {% image './src/images/about_img_0.webp', 'junk removal in progress',
       'cs-picture cs-picture1', 'lazy'%}
     </div>
     <!-- Right Content Section-->
