--- a/src/pages/projects.html
+++ b/src/pages/projects.html
@@ -32,33 +32,27 @@ eleventyNavigation:
     <div class="cs-image-group">
       <!-- Row 1-->
       <div class="cs-row cs-row-1">
-        {% image './src/images/portfolio/port-1.jpg', 'standby generator
+        {% image './src/images/portfolio/port-1.webp', 'standby generator
         installation', 'cs-picture cs-picture-1', 'lazy', '(max-width: 600px)
-        200px, 400px'%} {% image './src/images/portfolio/port-4.jpg', 'commercial
+        200px, 400px'%} {% image './src/images/portfolio/port-2.webp', 'commercial
         electrical panel upgrade', 'cs-picture cs-picture-2', 'lazy',
-        '(max-width: 600px) 200px, 400px'%} {% image
-        './src/images/portfolio/port-7.jpg', 'industrial lighting repair',
-        'cs-picture cs-picture-3', 'lazy', '(max-width: 600px) 200px, 400px'%}
+        '(max-width: 600px) 200px, 400px'%} 
       </div>
       <!-- Row 2 -->
       <div class="cs-row cs-row-2">
-        {% image './src/images/portfolio/port-2.jpg', 'LED lighting conversion',
+        {% image './src/images/portfolio/port-3.webp', 'LED lighting conversion',
         'cs-picture cs-picture-1', 'lazy', '(max-width: 600px) 200px, 400px'%}
-        {% image './src/images/portfolio/port-5.jpg', 'parking lot light repair',
+        {% image './src/images/portfolio/port-4.webp', 'parking lot light repair',
         'cs-picture cs-picture-2', 'lazy', '(max-width: 600px) 200px, 400px'%}
-        {% image './src/images/portfolio/port-8.jpg', 'floodlight installation',
-        'cs-picture cs-picture-3', 'lazy', '(max-width: 600px) 200px, 400px'%}
       </div>
       <!-- Row 3 -->
       <div class="cs-row cs-row-3">
-        {% image './src/images/portfolio/port-3.jpg', 'residential wiring
+        {% image './src/images/portfolio/port-5.webp', 'residential wiring
         project', 'cs-picture cs-picture-1', 'lazy', '(max-width: 600px) 200px,
-        400px'%} {% image './src/images/portfolio/port-6.jpg', 'commercial
-        electrical system installation', 'cs-picture cs-picture-2', 'lazy',
-        '(max-width: 600px) 200px, 400px'%} {% image
-        './src/images/portfolio/port-9.jpg', 'industrial power system
-        maintenance', 'cs-picture cs-picture-3', 'lazy', '(max-width: 600px)
-        200px, 400px'%}
+        400px'%} 
+        {% image './src/images/portfolio/port-1.webp', 'residential wiring
+        project', 'cs-picture cs-picture-1', 'lazy', '(max-width: 600px) 200px,
+        400px'%} 
       </div>
     </div>
     <a href="/contact" class="button-solid">Get Free Quote</a>
