--- a/src/pages/servicepages/furniture-hauling.html
+++ b/src/pages/servicepages/furniture-hauling.html
@@ -43,7 +43,7 @@ eleventyNavigation:
                 </picture>
                 <div class="cs-box">
                     <img class="cs-box-icon" loading="lazy" decoding="async"
-                        src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/sofa.svg" alt="sofa icon"
+                        src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/gear-white.svg" alt="icon"
                         width="60" height="60" />
                     <span class="cs-desc">Reliable Furniture Removal</span>
                 </div>
