--- a/src/pages/servicepages/junk-removal.html
+++ b/src/pages/servicepages/junk-removal.html
@@ -43,7 +43,7 @@ eleventyNavigation:
         </picture>
         <div class="cs-box">
           <img class="cs-box-icon" loading="lazy" decoding="async"
-            src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/gear-white.svg" alt="gear icon" width="60"
+            src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/gear-white.svg" alt="icon" width="60"
             height="60" />
           <span class="cs-desc">Family-Owned & Operated</span>
         </div>
