--- a/src/pages/servicepages/yard-waste.html
+++ b/src/pages/servicepages/yard-waste.html
@@ -43,7 +43,7 @@ eleventyNavigation:
                 </picture>
                 <div class="cs-box">
                     <img class="cs-box-icon" loading="lazy" decoding="async"
-                        src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/recycle-white.svg" alt="recycle icon"
+                        src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/gear-white.svg" alt="icon"
                         width="60" height="60" />
                     <span class="cs-desc">Eco-Friendly Yard Waste Disposal</span>
                 </div>
