--- a/src/pages/projects.html
+++ b/src/pages/projects.html
@@ -76,6 +76,6 @@ eleventyNavigation:
     </p>
     <a href="/contact.html" class="button-solid">Free Estimate</a>
   </div>
-  {% image './src/images/landing.png', 'electrical system upgrade', '',
+  {% image './src/images/final_home_img.png', 'electrical system upgrade', '',
   'lazy', '(max-width: 400px) 400px, (max-width: 850px) 850px, 1920px'%}
 </section>
