--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -92,8 +92,8 @@ eleventyNavigation:
       </ul>
       <!-- Picture -->
       <picture class="cs-picture">
-        <source media="(max-width: 600px)" srcset="/images/map.PNG" />
-        <source media="(min-width: 601px)" srcset="/images/map.PNG" />
+        <source media="(max-width: 600px)" srcset="/images/map.png" />
+        <source media="(min-width: 601px)" srcset="/images/map.png" />
         <img class="cs-img" aria-hidden="true" loading="lazy" decoding="async" src="/images/map.PNG"
           alt="Map showing Junk Force Michigan service area" width="462" height="438" />
       </picture>
