--- a/src/pages/services.html
+++ b/src/pages/services.html
@@ -1,7 +1,7 @@
 ---
 layout: "base.html"
 description: "Meta description for the page"
-metaTitle: "Halford Bookkeeping"
+metaTitle: "Junk Force Services - Quality and Affordable Junk Removal"
 tagTitle: "Services"
 title: "Services"
 preloadImg: "/images/landing-1920w.webp"
