updated final home image

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -54,7 +54,7 @@ eleventyNavigation:
 
       <div class="cs-flex-group">
         <p class="cs-flex-p">
-          I’m Mike Fry, founder of Junk Force Michigan. After 30 years in the corporate world, I decided to build a hands-on business with my kids. We're dedicated to helping our neighbors clear out unwanted junk and reclaim their space! We handle all the heavy lifting and disposal with a commitment to 100% customer satisfaction. Let us make your junk disappear! 🚚 We proudly serve the greater metro Detroit area and surrounding communities. Ready to get rid of your junk? Request a free quote today!
+          I’m Mike Fry, founder of Junk Force Michigan. After 30 years in the corporate world, I decided to build a hands-on business with my kids. We're dedicated to helping our neighbors clear out unwanted junk and reclaim their space! We handle all the heavy lifting and disposal with a commitment to 100% customer satisfaction. Let us make your junk disappear! We proudly serve the greater metro Detroit area and surrounding communities. Ready to get rid of your junk? Request a free quote today!
         </p>
         <span class="cs-name">Mike Fry</span>
         <span class="cs-job">Owner</span>
