--- a/src/pages/projects.html
+++ b/src/pages/projects.html
@@ -1,7 +1,7 @@
 ---
 layout: "base.html"
-description: "Junk Force Michigan provides expert electrical system repair and installation across Michigan. Residential, commercial, and industrial services including standby power systems, LED conversions, and lighting repairs."
-metaTitle: "Junk Force Michigan - Electrical Services in Michigan"
+description: "Junk Force Michigan provides reliable junk removal services across Michigan. From furniture hauling and appliance disposal to yard waste and construction debris cleanups, we make decluttering easy and stress-free."
+metaTitle: "Junk Force Michigan - Junk Removal Services in Michigan"
 tagTitle: "Projects"
 preloadImg: "/images/landing.png"
 preloadCSS: "/css/projects.css"
@@ -19,8 +19,9 @@ eleventyNavigation:
 
 <section id="int-hero">
   <h1 id="home-h">Our Projects</h1>
-  {% image './src/images/projectsbannerimg.png', 'electrical service projects', '',
-  'lazy', '(max-width: 400px) 400px, (max-width: 850px) 850px, 1920px'%}
+  {% image './src/images/projectsbannerimg.png', 'junk removal projects in
+  Michigan', '', 'lazy', '(max-width: 400px) 400px, (max-width: 850px) 850px,
+  1920px'%}
 </section>
 
 <!-- ============================================ -->
@@ -32,27 +33,27 @@ eleventyNavigation:
     <div class="cs-image-group">
       <!-- Row 1-->
       <div class="cs-row cs-row-1">
-        {% image './src/images/portfolio/port-1.webp', 'standby generator
-        installation', 'cs-picture cs-picture-1', 'lazy', '(max-width: 600px)
-        200px, 400px'%} {% image './src/images/portfolio/port-2.webp', 'commercial
-        electrical panel upgrade', 'cs-picture cs-picture-2', 'lazy',
-        '(max-width: 600px) 200px, 400px'%} 
+        {% image './src/images/portfolio/port-1.webp', 'furniture hauling
+        service', 'cs-picture cs-picture-1', 'lazy', '(max-width: 600px) 200px,
+        400px'%} {% image './src/images/portfolio/port-2.webp', 'appliance
+        disposal project', 'cs-picture cs-picture-2', 'lazy', '(max-width:
+        600px) 200px, 400px'%}
       </div>
       <!-- Row 2 -->
       <div class="cs-row cs-row-2">
-        {% image './src/images/portfolio/port-3.webp', 'LED lighting conversion',
+        {% image './src/images/portfolio/port-3.webp', 'yard waste cleanup',
         'cs-picture cs-picture-1', 'lazy', '(max-width: 600px) 200px, 400px'%}
-        {% image './src/images/portfolio/port-4.webp', 'parking lot light repair',
-        'cs-picture cs-picture-2', 'lazy', '(max-width: 600px) 200px, 400px'%}
+        {% image './src/images/portfolio/port-4.webp', 'construction debris
+        removal', 'cs-picture cs-picture-2', 'lazy', '(max-width: 600px) 200px,
+        400px'%}
       </div>
       <!-- Row 3 -->
       <div class="cs-row cs-row-3">
-        {% image './src/images/portfolio/port-5.webp', 'residential wiring
+        {% image './src/images/portfolio/port-5.webp', 'estate cleanout
+        service', 'cs-picture cs-picture-1', 'lazy', '(max-width: 600px) 200px,
+        400px'%} {% image './src/images/portfolio/port-1.webp', 'garage clearing
         project', 'cs-picture cs-picture-1', 'lazy', '(max-width: 600px) 200px,
-        400px'%} 
-        {% image './src/images/portfolio/port-1.webp', 'residential wiring
-        project', 'cs-picture cs-picture-1', 'lazy', '(max-width: 600px) 200px,
-        400px'%} 
+        400px'%}
       </div>
     </div>
     <a href="/contact" class="button-solid">Get Free Quote</a>
@@ -66,16 +67,16 @@ eleventyNavigation:
 <section id="cta">
   <div class="container">
     <h2 class="title">
-      Power Up <br />
-      With Us Today
+      Clear the Clutter <br />
+      With Junk Force Today
     </h2>
     <p>
-      From electrical repairs to complete installations, Junk Force Michigan
-      keeps Michigan homes, businesses, and facilities running smoothly. Contact
-      us today for dependable service and expert results.
+      From single-item pickups to full estate cleanouts, Junk Force Michigan
+      provides fast, affordable, and eco-friendly junk removal services across
+      Michigan. Contact us now to schedule your hassle-free pickup.
     </p>
     <a href="/contact.html" class="button-solid">Free Estimate</a>
   </div>
-  {% image './src/images/final_home_img.png', 'electrical system upgrade', '',
-  'lazy', '(max-width: 400px) 400px, (max-width: 850px) 850px, 1920px'%}
+  {% image './src/images/final_home_img.png', 'junk removal service in action',
+  '', 'lazy', '(max-width: 400px) 400px, (max-width: 850px) 850px, 1920px'%}
 </section>
