Updated about us image

--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -86,7 +86,7 @@ eleventyNavigation:
           </picture>
           <div class="cs-flex-group">
             <span class="cs-header">Phone</span>
-            Tel: <a href="tel:313-444-9540">(313) 444-9540</a>
+             <a href="tel:313-444-9540">(313) 444-9540</a>
           </div>
         </li>
       </ul>
